Add SmartFarming application UI components and ZonesView functionality
- Introduced SmartFarmingApp class to serve as the main application entry point.
- Implemented ZonesView class with multiple inner classes for handling table cell rendering.
- Added styling and layout configurations for various UI elements including tabs and tables.
- Integrated data handling for different growth stages and health statuses of crops and livestock.
- Established a responsive design with appropriate padding, alignment, and background colors.